# pygdk

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/: CODEOWNERS
pygdk/: __init__.py  __init__.pyi  base.py  base.pyi  color.py  color.pyi  constants.py  display.py  display.pyi  draw.py  draw.pyi  font.py  math.py  math.pyi  runtime.py  runtime.pyi  surface.py  surface.pyi  typing.pyi
