[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygdk"
version = "1.0.0-alpha.2"
description = ""
readme = "README.md"
requires-python = ">=3.10"
#classifiers = []
dependencies = [
     "pygame",
     "typing"
]

[project.urls]
source = "https://github.com/DevByEagle/pygdk"

